docs: update project description in README